fix: update destructive color variable in design system for better visibility

--- a/packages/design-system/styles/colors.css
+++ b/packages/design-system/styles/colors.css
@@ -25,7 +25,7 @@
   --accent-foreground: oklch(
     0.4999999999999999 0.07606416682299419 43.693639471691654
   );
-  --destructive: oklch(0.5820027827037993 0.15 73.69363947169165);
+  --destructive: oklch(0.65736 0.15 21.98);
   --destructive-foreground: oklch(
     0.04999999999999988 0.07606416682299419 43.693639471691654
   );
